@@ -1,0 +1,16 @@
+usr/bin/kchart
+usr/share/man/man1/kchart*
+usr/lib/libkchartpart.so
+usr/lib/libkchartpart.la
+usr/lib/kchart.so
+usr/lib/kchart.la
+usr/share/applnk/Office/kchart.desktop
+usr/share/mimelnk/application/x-kchart.desktop
+usr/share/apps/kchart/*
+usr/share/icons/hicolor/32x32/apps/kchart.png
+usr/share/icons/hicolor/48x48/apps/kchart.png
+usr/share/icons/locolor/16x16/apps/kchart.png
+usr/share/icons/locolor/32x32/apps/kchart.png
+usr/share/doc/koffice/kchart/*
+usr/share/doc/kde/HTML/en/kchart/*
+usr/share/lintian/overrides/kchart
