@@ -1,0 +1,1 @@
+application/x-kchart; kchart;test=test "$DISPLAY" != ""; priority=7
