@@ -1,0 +1,1 @@
+application/x-killustrator; killustrator;test=test "$DISPLAY" != ""; priority=7
