@@ -1,0 +1,3 @@
+# modules
+killustrator: no-shlibs-control-file usr/lib/libkillustratorpart.so
+killustrator: no-shlibs-control-file usr/lib/killustrator.so
