@@ -1,0 +1,110 @@
+usr/share/apps/koffice/*
+usr/share/services/kspelltool.desktop
+usr/share/servicetypes/kofilter.desktop
+usr/share/servicetypes/koplugin.desktop
+usr/share/servicetypes/kotool.desktop
+usr/share/servicetypes/kofficepart.desktop
+usr/share/servicetypes/kofilterdialog.desktop
+usr/share/servicetypes/kochart.desktop
+usr/share/services/kodocinfopropspage.desktop
+usr/share/services/kspread_csv_import.desktop
+usr/share/services/kspread_csv_import_dia.desktop
+usr/share/services/kspread_csv_export_dia.desktop
+usr/share/services/kspread_csv_export.desktop
+usr/share/services/kword_ascii_import.desktop
+usr/share/services/kword_ascii_export.desktop
+usr/share/services/kword_html_import.desktop
+usr/share/services/kword_html_export.desktop
+usr/share/services/ole_excel97_import.desktop
+usr/share/services/ole_powerpoint97_import.desktop
+usr/share/services/ole_winword97_import.desktop
+usr/lib/libkspelltool.so
+usr/lib/libkspelltool.la
+usr/bin/koscript
+usr/share/man/man1/koscript*
+usr/share/icons/locolor/16x16/actions/abs.png
+usr/share/icons/locolor/16x16/actions/brace.png
+usr/share/icons/locolor/16x16/actions/brackets.png
+usr/share/icons/locolor/16x16/actions/frac.png
+usr/share/icons/locolor/16x16/actions/int.png
+usr/share/icons/locolor/16x16/actions/lsub.png
+usr/share/icons/locolor/16x16/actions/lsup.png
+usr/share/icons/locolor/16x16/actions/matrix.png
+usr/share/icons/locolor/16x16/actions/paren.png
+usr/share/icons/locolor/16x16/actions/prod.png
+usr/share/icons/locolor/16x16/actions/rsub.png
+usr/share/icons/locolor/16x16/actions/rsup.png
+usr/share/icons/locolor/16x16/actions/sqrt.png
+usr/share/icons/locolor/16x16/actions/sum.png
+usr/share/icons/hicolor/22x22/actions/abs.png
+usr/share/icons/hicolor/22x22/actions/brace.png
+usr/share/icons/hicolor/22x22/actions/brackets.png
+usr/share/icons/hicolor/22x22/actions/frac.png
+usr/share/icons/hicolor/22x22/actions/int.png
+usr/share/icons/hicolor/22x22/actions/lsub.png
+usr/share/icons/hicolor/22x22/actions/lsup.png
+usr/share/icons/hicolor/22x22/actions/matrix.png
+usr/share/icons/hicolor/22x22/actions/paren.png
+usr/share/icons/hicolor/22x22/actions/prod.png
+usr/share/icons/hicolor/22x22/actions/rsub.png
+usr/share/icons/hicolor/22x22/actions/rsup.png
+usr/share/icons/hicolor/22x22/actions/sqrt.png
+usr/share/icons/hicolor/22x22/actions/sum.png
+usr/share/icons/hicolor/32x32/actions/abs.png
+usr/share/icons/hicolor/32x32/actions/brace.png
+usr/share/icons/hicolor/32x32/actions/brackets.png
+usr/share/icons/hicolor/32x32/actions/frac.png
+usr/share/icons/hicolor/32x32/actions/int.png
+usr/share/icons/hicolor/32x32/actions/lsub.png
+usr/share/icons/hicolor/32x32/actions/lsup.png
+usr/share/icons/hicolor/32x32/actions/matrix.png
+usr/share/icons/hicolor/32x32/actions/paren.png
+usr/share/icons/hicolor/32x32/actions/prod.png
+usr/share/icons/hicolor/32x32/actions/rsub.png
+usr/share/icons/hicolor/32x32/actions/rsup.png
+usr/share/icons/hicolor/32x32/actions/sqrt.png
+usr/share/icons/hicolor/32x32/actions/sum.png
+usr/share/doc/kde/HTML/en/koffice/*
+usr/share/doc/kde/HTML/en/doc/*
+usr/share/mimelnk/text/x-csv.desktop
+usr/lib/libkoml.so.1.0.0
+usr/lib/libkoml.so.1
+usr/lib/libkoml.la
+usr/lib/libkstore.so.1.0.0
+usr/lib/libkstore.so.1
+usr/lib/libkstore.la
+usr/lib/libkofficecore.so.1.0.0
+usr/lib/libkofficecore.so.1
+usr/lib/libkofficecore.la
+usr/lib/libkodocinfopropspage.so.0.0.0
+usr/lib/libkodocinfopropspage.so.0
+usr/lib/libkodocinfopropspage.la
+usr/lib/libkofficeui.so.1.0.0
+usr/lib/libkofficeui.so.1
+usr/lib/libkofficeui.la
+usr/lib/libkoscript.so.1.0.0
+usr/lib/libkoscript.so.1
+usr/lib/libkoscript.la
+usr/lib/libkformula.so.3.0.0
+usr/lib/libkformula.so.3
+usr/lib/libkformula.la
+usr/lib/libkochart.so.1.0.0
+usr/lib/libkochart.so.1
+usr/lib/libkochart.la
+usr/lib/libcsvimport.so
+usr/lib/libcsvimport.la
+usr/lib/libcsvfilterdia.so
+usr/lib/libcsvfilterdia.la
+usr/lib/libcsvexport.so
+usr/lib/libcsvexport.la
+usr/lib/libasciiimport.so
+usr/lib/libasciiimport.la
+usr/lib/libasciiexport.so
+usr/lib/libasciiexport.la
+usr/lib/libhtmlimport.so
+usr/lib/libhtmlimport.la
+usr/lib/libhtmlexport.so
+usr/lib/libhtmlexport.la
+usr/lib/libolefilter.so
+usr/lib/libolefilter.la
+usr/share/lintian/overrides/koffice-libs
