@@ -1,19 +1,21 @@
 #! /bin/sh
-# preinst script for koffice
+# postinst script for koffice-libs
 #
 # see: dh_installdeb(1)
 
 set -e
 
 case "$1" in
-    install|upgrade)
+    configure)
+	/sbin/ldconfig >/dev/null 
     ;;
 
-    abort-upgrade)
+    abort-upgrade|abort-remove|abort-deconfigure)
+
     ;;
 
     *)
-        echo "preinst called with unknown argument \`$1'" >&2
+        echo "postinst called with unknown argument \`$1'" >&2
         exit 0
     ;;
 esac
@@ -22,8 +24,5 @@ esac
 # generated by other debhelper scripts.
 
 #DEBHELPER#
-#KDEHELPER#
 
 exit 0
-
-
