@@ -1,0 +1,8 @@
+libkoml 1 koffice-libs (>= 2.0-final-0)
+libkstore 1 koffice-libs (>= 2.0-final-0)
+libkofficecore 1 koffice-libs (>= 2.0-final-0)
+libkodocinfopropspage 0 koffice-libs (>= 2.0-final-0)
+libkofficeui 1 koffice-libs (>= 2.0-final-0)
+libkoscript 1 koffice-libs (>= 2.0-final-0)
+libkformula 3 koffice-libs (>= 2.0-final-0)
+libkochart 1 koffice-libs (>= 2.0-final-0)
