@@ -1,0 +1,2 @@
+# modules
+koshell: no-shlibs-control-file usr/lib/koshell.so
