@@ -1,0 +1,18 @@
+usr/share/apps/kpresenter/*
+usr/share/applnk/Office/kpresenter.desktop
+usr/share/mimelnk/application/x-kpresenter.desktop
+usr/share/icons/hicolor/32x32/apps/kpresenter.png
+usr/share/icons/hicolor/48x48/apps/kpresenter.png
+usr/share/icons/locolor/16x16/apps/kpresenter.png
+usr/share/icons/locolor/32x32/apps/kpresenter.png
+usr/lib/libkpresenterpart.so
+usr/lib/libkpresenterpart.la
+usr/lib/kpresenter.so
+usr/lib/kpresenter.la
+usr/bin/kpresenter
+usr/bin/kprconverter.pl
+usr/share/man/man1/kpresenter*
+usr/share/man/man1/kprconvert*
+usr/share/doc/koffice/kpresenter/*
+usr/share/doc/kde/HTML/en/kpresenter/*
+usr/share/lintian/overrides/kpresenter
