@@ -1,0 +1,1 @@
+application/x-kpresenter; kpresenter;test=test "$DISPLAY" != ""; priority=7
