@@ -1,27 +1,28 @@
 #! /bin/sh
-# postrm script for koffice
+# postinst script for kpresenter
 #
 # see: dh_installdeb(1)
 
 set -e
 
 case "$1" in
-       purge|remove|upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
+    configure)
+	/sbin/ldconfig >/dev/null 
+    ;;
 
+    abort-upgrade|abort-remove|abort-deconfigure)
 
-        ;;
+    ;;
 
     *)
-        echo "postrm called with unknown argument \`$1'" >&2
+        echo "postinst called with unknown argument \`$1'" >&2
         exit 0
-
+    ;;
 esac
 
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
 
 #DEBHELPER#
-#KDEHELPER#
 
 exit 0
-
