@@ -1,0 +1,54 @@
+usr/lib/libkspreadpart.so
+usr/lib/libkspreadpart.la
+usr/lib/kspread.so
+usr/lib/kspread.la
+usr/lib/libkspreadcalc.so
+usr/lib/libkspreadcalc.la
+usr/bin/kspread
+usr/share/man/man1/kspread*
+usr/share/applnk/Office/kspread.desktop
+usr/share/mimelnk/application/x-kspread.desktop
+usr/share/apps/kspread/*
+usr/share/icons/locolor/16x16/apps/kspreadcalc.png
+usr/share/icons/locolor/16x16/apps/kspread.png
+usr/share/icons/locolor/22x22/apps/kspreadcalc.png
+usr/share/icons/locolor/32x32/apps/kspreadcalc.png
+usr/share/icons/locolor/32x32/apps/kspread.png
+usr/share/icons/hicolor/32x32/apps/kspread.png
+usr/share/icons/hicolor/32x32/actions/border_all.png
+usr/share/icons/hicolor/32x32/actions/border_bottom.png
+usr/share/icons/hicolor/32x32/actions/border_fall.png
+usr/share/icons/hicolor/32x32/actions/border_horizontal.png
+usr/share/icons/hicolor/32x32/actions/border_inside.png
+usr/share/icons/hicolor/32x32/actions/border_left.png
+usr/share/icons/hicolor/32x32/actions/border_outline.png
+usr/share/icons/hicolor/32x32/actions/border_remove.png
+usr/share/icons/hicolor/32x32/actions/border_right.png
+usr/share/icons/hicolor/32x32/actions/border_top.png
+usr/share/icons/hicolor/32x32/actions/border_up.png
+usr/share/icons/hicolor/32x32/actions/border_vertical.png
+usr/share/icons/hicolor/32x32/actions/funct.png
+usr/share/icons/hicolor/32x32/actions/percent.png
+usr/share/icons/hicolor/32x32/actions/prec_minus.png
+usr/share/icons/hicolor/32x32/actions/prec_plus.png
+usr/share/icons/hicolor/48x48/apps/kspread.png
+usr/share/icons/hicolor/22x22/actions/border_all.png
+usr/share/icons/hicolor/22x22/actions/border_bottom.png
+usr/share/icons/hicolor/22x22/actions/border_fall.png
+usr/share/icons/hicolor/22x22/actions/border_horizontal.png
+usr/share/icons/hicolor/22x22/actions/border_inside.png
+usr/share/icons/hicolor/22x22/actions/border_left.png
+usr/share/icons/hicolor/22x22/actions/border_outline.png
+usr/share/icons/hicolor/22x22/actions/border_remove.png
+usr/share/icons/hicolor/22x22/actions/border_right.png
+usr/share/icons/hicolor/22x22/actions/border_top.png
+usr/share/icons/hicolor/22x22/actions/border_up.png
+usr/share/icons/hicolor/22x22/actions/border_vertical.png
+usr/share/icons/hicolor/22x22/actions/funct.png
+usr/share/icons/hicolor/22x22/actions/percent.png
+usr/share/icons/hicolor/22x22/actions/prec_minus.png
+usr/share/icons/hicolor/22x22/actions/prec_plus.png
+usr/share/services/kspreadcalc.desktop
+usr/share/doc/koffice/kspread/*
+usr/share/doc/kde/HTML/en/kspread/*
+usr/share/lintian/overrides/kspread
