@@ -1,0 +1,1 @@
+application/x-kspread; kspread;test=test "$DISPLAY" != ""; priority=7
