@@ -1,0 +1,16 @@
+usr/bin/kword
+usr/share/man/man1/kword*
+usr/lib/libkwordpart.so
+usr/lib/libkwordpart.la
+usr/lib/kword.so
+usr/lib/kword.la
+usr/share/applnk/Office/kword.desktop
+usr/share/mimelnk/application/x-kword.desktop
+usr/share/apps/kword/*
+usr/share/icons/hicolor/32x32/apps/kword.png
+usr/share/icons/hicolor/48x48/apps/kword.png
+usr/share/icons/locolor/16x16/apps/kword.png
+usr/share/icons/locolor/32x32/apps/kword.png
+usr/share/doc/koffice/kword/*
+usr/share/doc/kde/HTML/en/kword/*
+usr/share/lintian/overrides/kword
