@@ -1,0 +1,1 @@
+application/x-kword; kword;test=test "$DISPLAY" != ""; priority=7
