@@ -1,0 +1,3 @@
+# modules
+kword: no-shlibs-control-file usr/lib/kword.so
+kword: no-shlibs-control-file usr/lib/libkwordpart.so
