@@ -1,5 +1,5 @@
 #! /bin/sh
-# postinst script for koffice
+# postinst script for kword
 #
 # see: dh_installdeb(1)
 
@@ -7,6 +7,7 @@ set -e
 
 case "$1" in
     configure)
+	/sbin/ldconfig >/dev/null 
     ;;
 
     abort-upgrade|abort-remove|abort-deconfigure)
