@@ -20,9 +20,5 @@ esac
 # generated by other debhelper scripts.
 
 #DEBHELPER#
-#KDEHELPER#
-
 
 exit 0
-
-
