@@ -1,8 +1,0 @@
-libkoml 1 
-libkstore 1 
-libkofficecore 1 
-libkodocinfopropspage 0 
-libkofficeui 1 
-libkoscript 1 
-libkformula 3 
-libkochart 1 
